--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,9 +2,8 @@
 dependencies: []
 
 galaxy_info:
-  author: geerlingguy
-  description: Node.js installation for Linux
-  company: "Midwestern Mac, LLC"
+  author: mitalcoi
+  company: Riverway
   license: "license (BSD, MIT)"
   min_ansible_version: 1.9
   platforms:
