--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -2,7 +2,7 @@
 - name: Ensure apt-transport-https is installed.
   apt: name=apt-transport-https state=present
 
-- name: Ensure apt-transport-https is installed.
+- name:  Build essential.
   apt: name=build-essential state=present
   
 - name: Add Nodesource apt key.
